[package]
name = "better_ode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "better_ode"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
ode_solvers = "0.3.7"
plotters = "0.3.0"
nalgebra = "0.32.1"
